fixed the overflow in the admin dashboard

--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ main[role="dashboard"] .container {
   position: relative;
   max-width: 1200px;
   padding: 1em;
-  top: 40px;
+  top: 20px;
   margin: 0 auto;
   background: #fff;
   border-radius: 5px;
